--- a/css/home_about.css
+++ b/css/home_about.css
@@ -6,7 +6,7 @@
     align-items: center;
     padding-bottom: 5%;
     padding-top: 7%;
-    height: 100vh;
+    min-height: 100vh;
 }
 #home_title {
     text-align: center;
@@ -26,7 +26,7 @@
 .about {
     padding-top: 3%;
     margin-bottom: 3%;
-    height: max-content;
+    height: auto;
 }
 #about_title {
     margin-left: var(--marginleft_about);
@@ -59,7 +59,7 @@
     margin-top: 7%;
 }
 .about_container {
-    height: 60vh;
+    height: auto;
     margin: 0 var(--marginright_about) 10% var(--marginleft_about);  /*top right bottom left*/
     display: grid;
     grid-template-columns: 0.4fr 0.15fr 1fr;
@@ -187,7 +187,7 @@
 
 @media screen and (max-width: 734px) { /*phone mode*/
     .home {
-        height: auto;
+        min-height: 50vh;
     }
     .about {
         height: auto;
